Fix for iconed-links spacing

--- a/src/main/webapp/themes/default/css/common.css
+++ b/src/main/webapp/themes/default/css/common.css
@@ -192,15 +192,24 @@
 .footer-links li{
 	padding-right:	2em;
 	color:			white;
+	
+	
+	position:relative;
 }
 
 .footer-links .icon-logo{
 	position:		relative;
-	top:			0.25em;
 	margin-right:	0.25em;
-	font-size:		1.5em;
+	font-size:		1.3em;
+	
+	top:			-0.2em;
+	position:		absolute;
 }
 
+.footer-links.with-icons a{
+	margin-left:1.4em;/*space for logo*/
+}
+	
 .footer-bottom-links{
 	margin-top:		0;
 	border-top:		solid 1px #E4E4E4;
